# verisimiser

./: .gitignore  0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CHANGELOG.md  CONTRIBUTING-DEV.adoc  Cargo.toml  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  build.rs  eclexiaiser.toml  flake.nix  guix.scm  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: session-start.sh
.devcontainer/: README.adoc
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  SECURITY.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: abi-ffi-gate.yml  codeql.yml  dogfood-gate.yml  governance.yml  hypatia-scan.yml  mirror.yml  provable.yml  release.yml  rhodibot.yml  rsr-antipattern.yml  rust-ci.yml  scorecard-enforcer.yml  (+3 more)
.machine_readable/: ADJUST.contractile  CLADE.a2ml  INTENT.contractile  MUST.contractile  TRUST.contractile
.well-known/: ai.txt  humans.txt  security.txt
container/: manifest.toml
docs/: RSR_OUTLINE.adoc  STATE-VISUALIZER.adoc  logging.adoc  logging.schema.json
examples/: README.adoc
scripts/: abi-ffi-gate.jl  abi-ffi-gate.sh
src/: doctor.rs  gc.rs  lib.rs  main.rs
tests/: integration_test.rs  logging_test.rs  provenance_fork_test.rs  sidecar_cli_test.rs  sqlite_intercept_e2e.rs
(+92 files in other folders)
